Apply OpenRewrite Java 21 migration recipes
- Replace String.format() with .formatted() method (Java 15+)
- Remove extra semicolons
- Update OpenRewrite plugin to v7 for compatibility

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>